--- a/package.json
+++ b/package.json
@@ -9,14 +9,32 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.8",
+    "@react-navigation/native-stack": "^6.9.14",
+    "axios": "^1.5.1",
     "expo": "~49.0.13",
+    "expo-dev-client": "~2.4.11",
+    "expo-document-picker": "~11.5.4",
+    "expo-linking": "~5.0.2",
+    "expo-local-authentication": "~13.4.1",
+    "expo-media-library": "~15.4.1",
+    "expo-permissions": "^14.4.0",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.72.5"
+    "react-dom": "^18.2.0",
+    "react-native": "0.72.5",
+    "react-native-blob-util": "^0.19.1",
+    "react-native-document-picker": "^9.0.1",
+    "react-native-exit-app": "^2.0.0",
+    "react-native-pdf": "^6.7.1",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.14",
+    "@types/react-native": "^0.72.3",
     "typescript": "^5.1.3"
   },
   "private": true
